# Faceroll

./: .gitignore  ActMain.lua  Bridge.lua  CHEATSHEET.md  Core.lua  Faceroll.lua  Faceroll.toc  Main.lua  ModBase.lua  ModFrame.lua  ModMain.lua  NEWSPEC.md  README.md  Registry.lua  Settings.example.lua  Settings.lua.example  SpecACA.lua  SpecALS.lua  SpecAM.lua  SpecAPB.lua  SpecATW.lua  SpecBM.lua  SpecCBF.lua  SpecCD.lua  SpecCI.lua  SpecCM.lua  SpecCP.lua  SpecCR.lua  SpecCS.lua  SpecCW.lua  SpecDA.lua  SpecDB.lua  SpecDG.lua  SpecDR.lua  SpecDW.lua  SpecEVO.lua  SpecFDK.lua  SpecHDH.lua  SpecHP.lua  SpecLOTA.lua  (+24 more)
Ascension/: SpecAPB.lua  SpecATS.lua  SpecArcaneThunderSeer.lua  SpecBBDruid.lua  SpecBBDruidBear.lua  SpecBBDruidBoom.lua  SpecBBDruidCat.lua  SpecBBDruidTree.lua  SpecBBMage.lua  SpecBBPaladin.lua  SpecBBPriest.lua  SpecBBRogue.lua  SpecBBShaman.lua  SpecBBWarlock.lua  SpecBBWarlockDungeon.lua  SpecBBWarlockGrind.lua  SpecBloodAndGuts.lua  SpecCarnageIncarnate.lua  SpecConsecratedStrikes.lua  SpecCorruptedBearForm.lua  SpecDA.lua  SpecDarkApotheosis.lua  SpecDarkRanger.lua  SpecDefiasGunslinger.lua  SpecEVO.lua  SpecEvoker.lua  SpecLavaSweep.lua  SpecLegacyOfTheArcanist.lua  SpecLeiShensLegacy.lua  SpecLucifur.lua  SpecMasterOfShadows.lua  SpecPlagueBearer.lua  SpecPredatorsWrath.lua  SpecRoulette.lua  SpecThermalVoid.lua  SpecThunderSlam.lua  SpecTreeofWrath.lua  SpecWhiteWalker.lua  SpecZandalariWindreaver.lua
Classic/: SpecDruid.lua  SpecDruidBalance.lua  SpecDruidFeral.lua  SpecMage.lua  SpecPAL.lua  (+6 more)
wabits/: .clang-format  CMakeLists.txt  run_wabits.bat  run_wabits_macos.example.sh  run_wabits_win.example.bat  wabits.c  wabits.lua  wabits.sh  wabits_lua.c  wabits_lua.h
(+124 files in other folders)
